# University-db

./: CMakeLists.txt  dataBase.cpp  dataBase.hpp  main.cpp  person.cpp  person.hpp  student.cpp  student.hpp
database/: dataBase.txt
headers/: dataBase.hpp  enumUiAction.hpp  person.hpp  student.hpp  userInterface.hpp
inc/: dataBase.hpp  enumStatusCode.hpp  enumUiAction.hpp  person.hpp  userInterface.hpp
src/: dataBase.cpp  person.cpp  student.cpp  userInterface.cpp
